# b2

./: .gitignore  README.md
core/: .gitignore  CMakeLists.txt  config.h.in
core/cmake/: FindGMP.cmake
core/src/function_tree/: node.cpp
core/src/function_tree/operators/: operator.cpp
core/src/function_tree/roots/: function.cpp  jacobian.cpp
core/src/function_tree/symbols/: differential.cpp  number.cpp  special_number.cpp  symbol.cpp  variable.cpp
core/test/classes/: complex_test.cpp  differentiate_test.cpp  differentiate_wrt_var.cpp  eigen_test.cpp  function_tree_test.cpp  function_tree_transform.cpp  homogenization_test.cpp  node_serialization_test.cpp  slice_test.cpp  start_system_test.cpp  system_test.cpp
core/test/classic/: classic_parsing_test.cpp
core/test/tracking_basics/: amp_criteria_test.cpp  euler_test.cpp  heun_test.cpp  newton_correct_test.cpp
core/test/utility/: enable_logging.hpp
python/: CMakeLists.txt  setup.py
python/cmake/: FindGMP.cmake  FindMPC.cmake  FindMPFR.cmake
python/examples/: endgame.py  solve_system.py
python/src/: Makemodule.am
python/test/classes/: eigenpy_numpy.py  test_classes.py
python/test/tracking/: amptracking_test.py  endgame_test.py
python/todo/: example_python.rst
